# A1220-lab1

./: .gitignore  Makefile  README.md  pyproject.toml
src/receipt_app/: file_io.py  gpt.py  main.py
