[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-app"
version = "0.1.0"
description = "Receipt processing app using GPT"
requires-python = ">=3.10"

dependencies = [
    "openai",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
receipt-app = "receipt_app.main:main"
